# msg

./: .gitignore  Cargo.toml  package-lock.json
migrations/: 20231004191650_message.sql
src/: lib.rs  main.rs  markup.rs  routes.rs
templates/: index.html  message_item.html  messages.html
