[package]
name = "msg"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
anyhow = "1.0.75"
axum-macros = "0.3.8"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
